scripts/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  selector:
    matchLabels:
      app: account-service

  template:
    metadata:
      labels:
        app: account-service

    spec:
      containers:
      - name: ${ACCOUNT_IMAGE_NAME}
        image: "${ACR_REGISTRY}/${ACCOUNT_IMAGE_NAME}:${BUILD_NUMBER}"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: "${ACR_SECRET}"

---
kind: Service
apiVersion: v1
metadata:
  name: account-service
spec:
  selector:
    app: account-service
  ports:
  - port: 80
    targetPort: 80
