scripts/auth-service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth-service
spec:
  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
      - name: ${AUTH_IMAGE_NAME}
        image: "${ACR_REGISTRY}/${AUTH_IMAGE_NAME}:${BUILD_NUMBER}"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: "${ACR_SECRET}"

---
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
  - port: 80
    targetPort: 80
