scripts/gateway.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
      - name: ${GATEWAY_IMAGE_NAME}
        image: "${ACR_REGISTRY}/${GATEWAY_IMAGE_NAME}:${BUILD_NUMBER}"
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: "${ACR_SECRET}"

---
kind: Service
apiVersion: v1
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
  - port: 4000
    targetPort: 4000
