scripts/monitoring.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitoring
spec:
  selector:
    matchLabels:
      app: monitoring

  template:
    metadata:
      labels:
        app: monitoring

    spec:
      containers:
      - name: ${MONITORING_IMAGE_NAME}
        image: "${ACR_REGISTRY}/${MONITORING_IMAGE_NAME}:${BUILD_NUMBER}"
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: "${ACR_SECRET}"

---
kind: Service
apiVersion: v1
metadata:
  name: monitoring
spec:
  selector:
    app: monitoring
  ports:
  - port: 8080
    targetPort: 8080
