scripts/mq.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672

---
  kind: Service
  apiVersion: v1
  metadata:
    name: rabbitmq
  spec:
    selector:
      app: rabbitmq
    ports:
    - port: 5672
      targetPort: 5672
