scripts/registry.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: registry

  template:
    metadata:
      labels:
        app: registry

    spec:
      containers:
      - name: ${REGISTRY_IMAGE_NAME}
        image: "${ACR_REGISTRY}/${REGISTRY_IMAGE_NAME}:${BUILD_NUMBER}"
        ports:
        - containerPort: 8761
      imagePullSecrets:
      - name: "${ACR_SECRET}"

---
kind: Service
apiVersion: v1
metadata:
  name: registry
spec:
  selector:
    app: registry
  ports:
  - port: 8761
    targetPort: 8761
