scripts/statistics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-service
spec:
  selector:
    matchLabels:
      app: statistics-service

  template:
    metadata:
      labels:
        app: statistics-service

    spec:
      containers:
      - name: statistics-service
        image: andxu/statistics-service
        ports:
          - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: statistics-service
spec:
  selector:
    app: statistics-service
  ports:
  - port: 80
    targetPort: 80
